--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,13 @@
 name = "ward"
 version = "0.1.0"
 authors = ["ex0dus-0x <ex0dus@codemuch.tech>"]
+description = "A security-hardened notary for Linux applications"
+
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+
+clap = "2.33.*"
+
 goblin = "0.2.3"
+microkv = "*"
